ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error1.asc
//

function f(){
       local f=10;
       function g(){
               f=5;            //Error : Cannot access 'f' inside function 'g'
               return f();     //Error : Cannot access 'f' inside function 'g'
       }
}
